--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,4 @@
-transformers
-datasets
-torch
-librosa
-torchaudio
-unidic-lite
-mecab-python3
-streamlit
-audio-recorder-streamlit
-st-annotated-text
-matplotlib
-openpyxl
-minineedle
-levenshtein
+pandas
+numpy
+minicons
+scikit-learn
